--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 		<meta charset="UTF-8">
 		<title>オープラン理解度確認テスト</title>
 	</head>
+	<body>
+		<h1>確認度テストですよ</h1>
+	</body>
 </html>
-<body>
-	<h1>確認度テストです</h1>
-</body>
