--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,9 +1,18 @@
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<meta charset="UTF-8">
 		<title>オープラン理解度確認テスト</title>
 	</head>
 	<body>
 		<h1>確認度テストですよ</h1>
+		<table border="1">
+		  <tr>
+		    <th>ID</th><th>名前</th>
+		  </tr>
+		  <tr th:each="obj : ${data}">
+		    <td th:text="${obj.id}"></td>
+		    <td th:text="${obj.name}"></td>
+		  </tr>
+		</table>
 	</body>
 </html>
