--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,7 +38,6 @@
 		   	<td th:text="${obj.type}"></td>
 		  </tr>
 		</table>
-		
 		<p>SQL</p>
 		<table border="1">
 		  <tr>
@@ -53,7 +52,26 @@
 		   	<td th:text="${obj.select_4}"></td>
 		   	<td th:text="${obj.answer}"></td>
 		   	<td th:text="${obj.type}"></td>
+		   	
 		  </tr>
 		</table>
+		<div th:each="obj : ${data_php}">
+		<form th:name="'PHP'+${obj.id}">
+			<h4 th:text="${obj.problem}"></h4>
+			<input type="radio" th:value=${obj.select_1} th:text=${obj.select_1}>
+			<input type="radio" th:value=${obj.select_2} th:text=${obj.select_2}>
+			<input type="radio" th:value=${obj.select_3} th:text=${obj.select_3}>
+			<input type="radio" th:value=${obj.select_4} th:text=${obj.select_4}>	
+		</form>
+		</div>
+		<div th:each="obj : ${data_java}">
+		<form th:name="'JAVA'+${obj.id}">
+			<h4 th:text="${obj.problem}"></h4>
+			<input type="radio" th:value=${obj.select_1} th:text=${obj.select_1}>
+			<input type="radio" th:value=${obj.select_2} th:text=${obj.select_2}>
+			<input type="radio" th:value=${obj.select_3} th:text=${obj.select_3}>
+			<input type="radio" th:value=${obj.select_4} th:text=${obj.select_4}>	
+		</form>
+		</div>
 	</body>
 </html>
