--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -59,25 +59,25 @@
 		   	
 		  </tr>
 		</table>
-		<form name="question_form" action="#" method="post">
+		<form name="question_form" action="/answer" th:object="${answerForm}" method="post">
 		<h2>PHP</h2>
-		<div th:each="obj : ${data_php}">
+		<div th:each="obj,stat : ${data_php}">
 
 			<h4 th:text="${obj.problem}"></h4>
-			<p><input type="radio" th:name="${obj.id}" th:value=${obj.select_1} th:text=${obj.select_1} class="question-select"></p>
-			<p><input type="radio" th:name="${obj.id}" th:value=${obj.select_2} th:text=${obj.select_2} class="question-select"></p>
-			<p><input type="radio" th:name="${obj.id}" th:value=${obj.select_3} th:text=${obj.select_3} class="question-select"></p>
-			<p><input type="radio" th:name="${obj.id}" th:value=${obj.select_4} th:text=${obj.select_4} class="question-select"></p>
+			<p><input type="radio" th:name="|selectPHP[${stat.index}]|" th:value=${obj.select_1} th:text=${obj.select_1} class="question-select"></p>
+			<p><input type="radio" th:name="|selectPHP[${stat.index}]|" th:value=${obj.select_2} th:text=${obj.select_2} class="question-select"></p>
+			<p><input type="radio" th:name="|selectPHP[${stat.index}]|" th:value=${obj.select_3} th:text=${obj.select_3} class="question-select"></p>
+			<p><input type="radio" th:name="|selectPHP[${stat.index}]|" th:value=${obj.select_4} th:text=${obj.select_4} class="question-select"></p>
 		
 		</div>
 		<h2>Java</h2>
-		<div th:each="obj : ${data_java}">
+		<div th:each="obj,stat : ${data_java}">
 
 			<h4 th:text="${obj.problem}"></h4>
-			<p><input type="radio" th:name="${obj.id}" th:value=${obj.select_1} th:text=${obj.select_1} class="question-select"></p>
-			<p><input type="radio" th:name="${obj.id}" th:value=${obj.select_2} th:text=${obj.select_2} class="question-select"></p>
-			<p><input type="radio" th:name="${obj.id}" th:value=${obj.select_3} th:text=${obj.select_3} class="question-select"></p>
-			<p><input type="radio" th:name="${obj.id}" th:value=${obj.select_4} th:text=${obj.select_4} class="question-select"></p>
+			<p><input type="radio" th:name="|selectJava[${stat.index}]|" th:value=${obj.select_1} th:text=${obj.select_1} class="question-select"></p>
+			<p><input type="radio" th:name="|selectJava[${stat.index}]|" th:value=${obj.select_2} th:text=${obj.select_2} class="question-select"></p>
+			<p><input type="radio" th:name="|selectJava[${stat.index}]|" th:value=${obj.select_3} th:text=${obj.select_3} class="question-select"></p>
+			<p><input type="radio" th:name="|selectJava[${stat.index}]|" th:value=${obj.select_4} th:text=${obj.select_4} class="question-select"></p>
 		</div>
 		<input type="submit" value="回答を送信する" class="submit-button">
 		</form>
