--- a/src/main/resources/static/css/question.css
+++ b/src/main/resources/static/css/question.css
@@ -1,12 +1,18 @@
 body{
 	margin: 0;
+	background-color: #f5f5f5;
 }
 
 .container{
-	margin: 30px;
+	margin: 30px 40px;
 }
 
 .submit-button{
 	padding: 10px;
 	margin: 20px 0px;
 }
+
+.question-wrapper{
+	border-bottom: solid 1px #b3b3b3;
+}
+
