--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,59 +9,10 @@
 		<h1>確認度テスト</h1>
 		<p>問題文を読み、以下の４つの選択肢から当てはまる回答を１つ選んで選択しなさい。</p>
 		<p>全ての問題に回答出来たら、最下部の送信ボタンで回答を送信しなさい。</p>
-		<p>JAVA</p>
-		<table border="1">
-		  <tr>
-		    <th>ID</th><th>問題</th><th>選択肢1</th><th>選択肢2</th><th>選択肢3</th><th>選択肢4</th><th>答え</th><th>ジャンル</th>
-		  </tr>
-		  <tr th:each="obj : ${data_java}">
-		    <td th:text="${obj.id}"></td>
-		    <td th:text="${obj.problem}"></td>
-		   	<td th:text="${obj.select_1}"></td>
-		   	<td th:text="${obj.select_2}"></td>
-		   	<td th:text="${obj.select_3}"></td>
-		   	<td th:text="${obj.select_4}"></td>
-		   	<td th:text="${obj.answer}"></td>
-		   	<td th:text="${obj.type}"></td>
-		  </tr>
-		</table>
 		
-		<p>PHP</p>
-		<table border="1">
-		  <tr>
-		    <th>ID</th><th>問題</th><th>選択肢1</th><th>選択肢2</th><th>選択肢3</th><th>選択肢4</th><th>答え</th><th>ジャンル</th>
-		  </tr>
-		  <tr th:each="obj : ${data_php}">
-		    <td th:text="${obj.id}"></td>
-		    <td th:text="${obj.problem}"></td>
-		   	<td th:text="${obj.select_1}"></td>
-		   	<td th:text="${obj.select_2}"></td>
-		   	<td th:text="${obj.select_3}"></td>
-		   	<td th:text="${obj.select_4}"></td>
-		   	<td th:text="${obj.answer}"></td>
-		   	<td th:text="${obj.type}"></td>
-		  </tr>
-		</table>
-		<p>SQL</p>
-		<table border="1">
-		  <tr>
-		    <th>ID</th><th>問題</th><th>選択肢1</th><th>選択肢2</th><th>選択肢3</th><th>選択肢4</th><th>答え</th><th>ジャンル</th>
-		  </tr>
-		  <tr th:each="obj : ${data_sql}">
-		    <td th:text="${obj.id}"></td>
-		    <td th:text="${obj.problem}"></td>
-		   	<td th:text="${obj.select_1}"></td>
-		   	<td th:text="${obj.select_2}"></td>
-		   	<td th:text="${obj.select_3}"></td>
-		   	<td th:text="${obj.select_4}"></td>
-		   	<td th:text="${obj.answer}"></td>
-		   	<td th:text="${obj.type}"></td>
-		   	
-		  </tr>
-		</table>
 		<form name="question_form" action="#" method="post">
 		<h2>PHP</h2>
-		<div th:each="obj : ${data_php}">
+		<div class="question-wrapper" th:each="obj : ${data_php}">
 
 			<h4 th:text="${obj.problem}"></h4>
 			<p><input type="radio" th:name="${obj.id}" th:value=${obj.select_1} th:text=${obj.select_1} class="question-select"></p>
@@ -71,7 +22,7 @@
 		
 		</div>
 		<h2>Java</h2>
-		<div th:each="obj : ${data_java}">
+		<div class="question-wrapper" th:each="obj : ${data_java}">
 
 			<h4 th:text="${obj.problem}"></h4>
 			<p><input type="radio" th:name="${obj.id}" th:value=${obj.select_1} th:text=${obj.select_1} class="question-select"></p>
